cabal-version: 3.0
name: quantum
version: 0.0.1
license: GPL-3.0-only
license-file: LICENSE
build-type: Simple
Maintainer:  teto
Category:   Network
Synopsis: A Multipath TCP analyzer
Homepage:   https://github.com/teto/quantum
Description:
  Multipath TCP (www.multipath-tcp.org) analyzer
Extra-source-files:
  README.md CHANGELOG

Source-repository head
  type:       git
  location:   https://github.com/teto/quantum

Flag WithPolysemy {
  Description: Add polysemy plugin
  Default:     True
}



-- aeson to (de)serialize to json
-- text is used to convert from string and in aeson
-- http://hackage.haskell.org/package/bitset-1.4.8/docs/Data-BitSet-Word.html
common shared-properties
    build-depends: base >= 4.12 && < 4.20
      , optparse-applicative
      , containers
      -- polysemybased logger
      , co-log-core
      , co-log-polysemy
      , readable
      , polysemy
      , hashable
      , bytestring
      , hvega
      , ip
      -- , netlink >= 1.1.1.0
       , transformers-base
       , transformers
       , mtl
       , template-haskell
       , exceptions
       , ghc-prim
       , foldl
       , text
       -- microlens taken from Frames
       -- , microlens
       , lens
       -- for merge
       , aeson
       , aeson-pretty
       , aeson-extra
       -- , monad-control
       , pipes
       , process
       -- to help with merging json content
       -- , unordered-containers
       -- to create temp folder/files
       , temporary
       , singletons
       , filepath
       -- , repline
       , Frames
       , Cabal
       , directory
       , vinyl
       , vector
       , haskeline >= 0.8.0.0
       , mptcp-pm >= 0.0.4

        -- for plotting that's what is used in Frames
      -- diagrams is not ready for 8.10
      -- , diagrams
       , Chart >= 1.5
       -- , Chart-diagrams >= 1.5
       , Chart-cairo
       , wide-word
       -- diagrams-cairo
       -- , diagrams-rasterific >= 1.3
       -- , diagrams-lib >= 1.3
    default-language: Haskell2010
    -- -fno-warn-unused-imports
    -- -fforce-recomp  makes it build twice
    if flag(WithPolysemy)
        ghc-options: -fplugin=Polysemy.Plugin
        build-depends: polysemy-plugin

    -- -ddump-splices to dump TH code
    ghc-options:
        -Wall -fno-warn-unused-binds -fno-warn-unused-matches
        -fprof-auto
        -ddump-splices -ddump-to-file -dth-dec-file
        -Wno-unused-imports
        -- -fplugin=Polysemy.Plugin
    default-extensions:
        -- , OverloadedStrings
        FlexibleContexts
        , DataKinds
        , FlexibleContexts
        , GADTs
        , LambdaCase
        , PolyKinds
        , RankNTypes
        , ScopedTypeVariables
        , TemplateHaskell
        , TypeApplications
        , TypeOperators
        , TypeFamilies
    -- Other-modules:


library libmptcpanalyzer
    import: shared-properties
    visibility: public
    -- Other-modules:
    Exposed-Modules:
        Tshark.TH
        , Tshark.TH2
        , Net.Mptcp.Types
        , Net.Tcp.Stats
        -- reexport the rest
        , MptcpAnalyzer
        , MptcpAnalyzer.Loader
        , MptcpAnalyzer.Frame
        , MptcpAnalyzer.Types
        , MptcpAnalyzer.Plots.Types
        , MptcpAnalyzer.Debug
        , MptcpAnalyzer.Pcap
        , MptcpAnalyzer.Cache
        , MptcpAnalyzer.Map
        , MptcpAnalyzer.Merge
        , MptcpAnalyzer.Plots
        , MptcpAnalyzer.Plots.Stream
        -- TODO remove les commandes ?
        , MptcpAnalyzer.Commands
        , MptcpAnalyzer.Commands.Definitions
        , MptcpAnalyzer.Commands.Load
        , MptcpAnalyzer.Commands.Export
        , MptcpAnalyzer.Commands.Utils
        , MptcpAnalyzer.Commands.List
        , MptcpAnalyzer.Commands.ListMptcp
        , MptcpAnalyzer.Commands.Plot
        , Columns
        , Connection
    build-depends:
        Chart
        , Chart-cairo
    hs-source-dirs: src/

-- monitor new mptcp connections
executable mptcpanalyzer
    import: shared-properties
    build-depends: libmptcpanalyzer
    Other-modules:
        Tshark.TH
        , Tshark.TH2
        , Net.Mptcp.Types
        -- reexport the rest
        , MptcpAnalyzer
        , MptcpAnalyzer.Loader
        , MptcpAnalyzer.Types
        , MptcpAnalyzer.Plots.Types
        , MptcpAnalyzer.Debug
        , MptcpAnalyzer.Pcap
        , MptcpAnalyzer.Cache
        , MptcpAnalyzer.Merge
        , MptcpAnalyzer.Commands
        , MptcpAnalyzer.Commands.Definitions
        , MptcpAnalyzer.Commands.Load
        , MptcpAnalyzer.Commands.Export
        , MptcpAnalyzer.Commands.Plot
        , MptcpAnalyzer.Commands.Map
        , Columns
        , MptcpAnalyzer.Commands.Utils
        , MptcpAnalyzer.Commands.List, MptcpAnalyzer.Types, Connection
        , MptcpAnalyzer.Commands.ListMptcp
        , MptcpAnalyzer.Commands.Plot
        , MptcpAnalyzer.Plots.Stream
    -- for now reference mptcp-pm but later move part to a core
    -- build-depends: mptcp-pm >= 0.0.3
    main-is: Main.hs
    hs-source-dirs: src/
    ghc-options: -threaded -fprof-auto -rtsopts

Test-Suite test
  -- 2 types supported, exitcode is based on ... exit codes ....
  type:               exitcode-stdio-1.0
  main-is:            PcapSpec.hs
  hs-source-dirs:     tests
  -- Other-modules:     Pcap, Columns

  build-depends:      base >=4.12 && <4.20
                     , HUnit
                     , hspec
                     , QuickCheck
                     , libmptcpanalyzer
